<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackgrey">

    <TextView
        android:id="@+id/tellUsAboutYourSelf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/detailsSignUp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blackgrey"
        android:background="@color/white"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/arrowdown"
        android:layout_marginTop="-2dp"
        android:layout_marginBottom="3dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:ems="10"
        android:layout_margin="5dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="12dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="#fff"
        android:ems="10"
        android:layout_margin="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="#fff"
        android:ems="10"
        android:layout_margin="5dp"
        android:hint="@string/streetaddress"
        android:inputType="textPostalAddress"
        android:padding="12dp" />

    <EditText
        android:id="@+id/zip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="#fff"
        android:ems="10"
        android:layout_margin="5dp"
        android:hint="@string/zip"
        android:inputType="number"
        android:padding="12dp" />

    <EditText
        android:id="@+id/phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="#fff"
        android:ems="10"
        android:layout_margin="5dp"
        android:hint="@string/phonenumber"
        android:inputType="phone"
        android:padding="12dp" />


    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/button_background_signup"
        android:textColor="@color/white"
        android:text="@string/signUp"
        android:onClick="addUser"/>

</LinearLayout>