<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackgrey">

    <TextView
        android:id="@+id/tellUsAboutYourSelf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blackgrey"
        android:background="@color/white"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/arrowdown"
        android:layout_marginTop="-2dp"
        android:layout_marginBottom="100dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/lusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="#fff"
        android:ems="10"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="12dp" />

    <EditText
        android:id="@+id/lpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="#fff"
        android:ems="10"
        android:layout_margin="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background_signin"
        android:textColor="@color/white"
        android:text="@string/login"
        android:onClick="login"/>

</LinearLayout>